# thespian

./: .gitignore  ADVANCED_STRUCTURE_README.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_FIX.md  CONSOLIDATED_CAPABILITIES.md  DEBUG_ANALYSIS.md  ENHANCEMENTS_MASTER_README.md  ENHANCEMENTS_README.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_ROADMAP.md  ERROR_LOG.md  IDE_INTEGRATION_PLAN.md  MEMORY_ENHANCEMENTS_README.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  Makefile  README.md  SCENE_UNIQUENESS_FIXES_SUMMARY.md  USER_GUIDE_ADVANCED_STRUCTURE.md  activate_env.sh  add_api_key.py  aggressive_quantum_demo.py  algorithmic_court.txt  algorithmic_court_detailed.txt  comprehensive_example.py  continuity_demo.py  debug_validation.py  deep_quantum_demo.py  demo_consolidated.py  enhanced_agent_collaboration.py  extract_scenes.py  full_production_demo.py  generate_act1.py  human_input.md  minimal_example.py  minimal_working_example.py  mock_playwright_test.py  multi_scene_production.py  production.txt  pyproject.toml  (+13 more)
docs/: enhancement_roadmap.md  quantum_narrative_framework.md
examples/: advanced_story_structure_demo.py  collaborative_scene_demo.py  combined_enhancements_example.py  compare_playwright_versions.py  demo_advanced_structure_capabilities.py  detail_enhancement_demo.py  enhanced_scene_generation.py  full_play_production.py  implementation_validation.py  interaction_protocol_demo.py  memory_enhanced_generation.py  simple_production.py  simple_structure_test.py  test_collaborative_simple.py  test_enhanced_agents_integration.py  test_structure.py  test_structure_minimal.py
tests/: __init__.py  test_error_fixes.py  test_tui_widgets.py
tests/unit/: test_checkpoint_manager.py  test_dialogue_system.py  test_enhanced_agents.py  test_interaction_protocol.py  test_llm_integration.py  test_models.py  test_playwright_agent.py  test_playwrights.py  test_production_structure.py  test_run_manager.py  test_scene_length.py
thespian/: __init__.py  agents.py  agents_enhanced.py  agents_improved.py  cli.py  config_manager.py  performance.py  production.py  theatre.py
thespian/agents/theatrical/: __init__.py  proximics_mapping.py  subtext_layering.py
thespian/checkpoints/: __init__.py  checkpoint_manager.py
thespian/config/: enhanced_prompts.py  prompts.py
thespian/experimental/ide/: __init__.py  agent_viz.py  performance_dash.py  prompt_manager.py
thespian/ide/: __init__.py  agent_visualizer.py  performance_dashboard.py  prompt_manager.py  rehearsal_sandbox.py  script_editor.py
thespian/llm/: __init__.py  advanced_story_structure.py  agent_personas.py  character_analyzer.py  collaborative_playwright.py  config.py  consolidated_playwright.py  detail_enhancer.py  dialogue_system.py  enhanced_memory.py  enhanced_playwright.py  error_handling.py  iterative_refinement.py  manager.py  memory_enhanced_playwright.py  memory_management.py  models.py  playwright.py  playwright_optimizations.py  playwright_refactored.py  production_structure.py  quality_control.py  quantum_narrative.py  quantum_playwright.py  run_manager.py  scene_generation.py  story_outline_fix.py  theatrical_advisors.py  theatrical_memory.py
thespian/processors/: __init__.py  act_processor.py  scene_processor.py
thespian/production/: __init__.py  metrics_tracker.py  workflow_manager.py
thespian/protocols/: __init__.py  agent_interaction.py  feedback_schema.py
thespian/tui/: app.py  dialogs.py  state.py  widgets.py  widgets.py.new
thespian/utils/: __init__.py  error_handling.py
tui/: widgets.py
